# rospix

./: .gitmodules  CMakeLists.txt  README.md  package.xml  timepix.cpp
config/: dummy.yaml  lite_rigaku.yaml  test.yaml
equalizations/: lite_rigaku.bpc  lite_rigaku.bpc.dacs
include/: common.h  timepix.h  timepix_handler.h  usb.h
launch/: dummy.launch  list_devices.launch  test.launch
msg/: Image.msg  ImageInfo.msg  Status.msg
src/: list_devices.cpp  main.cpp  rospix.cpp  timepix.cpp  timepix_handler.cpp
srv/: BatchExposure.srv  SetBias.srv  SetDouble.srv  SetInt.srv  SetMode.srv  SetThreshold.srv  SingleExposure.srv
