<?xml version="1.0"?>
<package>
  <name>rospix</name>
  <version>1.0.0</version>
  <description>ROS package for controlling Timepix detectors</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com:rospix/rospix</url>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_generation</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
