<?xml version="1.0"?>
<package format="2">

  <name>rospix</name>
  <version>1.0.0</version>
  <description>ROS package for controlling Timepix detectors</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libopencv-dev</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>

  <export>
  </export>

</package>
